--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subscribe Example</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="any">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- <link rel="icon" href="/icon.svg" type="image/svg+xml"> -->
     <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
     <!-- <link rel="manifest" href="manifest.webmanifest"> -->
