--- a/index.html
+++ b/index.html
@@ -458,15 +458,17 @@
                 The Apollon Series launches on Kickstarter this February.
  Join The Foundry to get pre-launch updates, early access, and exclusive offers before pledges go live.
             </p>
-            <form class="flex flex-col sm:flex-row gap-4 max-w-lg mx-auto" onsubmit="event.preventDefault(); alert('Access Granted. Welcome to The Foundry.')">
+            <form class="flex flex-col sm:flex-row gap-4 max-w-lg mx-auto" id="subscribe-form">
                 <div class="relative flex-1">
                     <i data-lucide="mail" class="absolute left-4 top-1/2 transform -translate-y-1/2 text-white/50 w-4 h-4"></i>
-                    <input type="email" placeholder="ENTER SIGNAL FREQUENCY" class="w-full bg-black/30 border border-white/20 text-white placeholder-white/50 py-4 pl-12 pr-4 focus:outline-none focus:border-brand-gold transition-colors text-xs tracking-widest uppercase rounded-sm h-14">
+                    <input type="email" id="email" name="email" placeholder="ENTER SIGNAL FREQUENCY" class="w-full bg-black/30 border border-white/20 text-white placeholder-white/50 py-4 pl-12 pr-4 focus:outline-none focus:border-brand-gold transition-colors text-xs tracking-widest uppercase rounded-sm h-14">
                 </div>
                 <button type="submit" class="bg-brand-gold text-brand-dark font-bold uppercase tracking-widest px-8 py-4 hover:bg-white transition-colors rounded-sm h-14 flex items-center justify-center gap-2 text-xs">
                     Initialize <i data-lucide="arrow-right" class="w-4 h-4"></i>
                 </button>
             </form>
+                            <div id="response-message" class="mt-3"></div>
+
         </div>
     </section>
 
@@ -1147,6 +1149,48 @@
         }
 
         init();
+    </script>
+
+    <script>
+        document.getElementById('subscribe-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            const form = event.target;
+            const formData = new FormData(form);
+            const data = Object.fromEntries(formData.entries());
+            const responseDiv = document.getElementById('response-message');
+
+            // Toggle API URL based on the switch
+            // const useDevUrl = document.getElementById('url-switch').checked;
+            // const baseUrl = useDevUrl ? 'https://dev.1voct.org' : 'https://inventor.1voct.org';
+            // const baseUrl = 'https://inventor.1voct.org';
+            const baseUrl = 'https://dev.1voct.org';
+            const apiUrl = `${baseUrl}/inventor/api/create_crm_user/`;
+
+            fetch(apiUrl, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(data),
+            })
+            .then(response => response.json())
+            .then(result => {
+                if (result.status === 'success') {
+                    responseDiv.className = 'alert alert-success';
+                    responseDiv.textContent = 'Thank you for subscribing!';
+                    form.reset();
+                } else {
+                    responseDiv.className = 'alert alert-danger';
+                    responseDiv.textContent = 'Error: ' + (result.message || 'An unknown error occurred.');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                responseDiv.className = 'alert alert-danger';
+                responseDiv.textContent = 'A network error occurred. Please try again.';
+            });
+        });
     </script>
 </body>
 </html>
