--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>Redirecting...</title>
     <!-- Redirect to another page immediately -->
-    <meta http-equiv="refresh" content="0; url=oepicus.com/comming_soon.html" />
+    <meta http-equiv="refresh" content="0; url=coming_soon.html" />
 </head>
 <body>
-    <p>If you are not redirected automatically, please follow this <a href="oepicus.com/comming_soon.html">link to the new page</a>.</p>
+    <p>If you are not redirected automatically, please follow this <a href="https://oepicus.com/coming_soon.html">link to the new page</a>.</p>
 </body>
 </html>
