--- a/coming_soon.html
+++ b/coming_soon.html
@@ -201,13 +201,13 @@
                     <div class="flex flex-col items-center gap-4">
                         <span class="text-xs font-bold text-brand-gold uppercase tracking-[0.3em] glow-text">Community</span>
                         <div class="flex gap-6">
-                            <a href="#" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="Instagram">
+                            <a href="https://www.instagram.com/oepicus" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="Instagram">
                                 <i data-lucide="instagram" class="w-5 h-5 stroke-[1.5]"></i>
                             </a>
-                            <a href="#" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="Facebook">
+                            <a href="https://www.facebook.com/profile.php?id=61584611603188" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="Facebook">
                                 <i data-lucide="facebook" class="w-5 h-5 stroke-[1.5]"></i>
                             </a>
-                            <a href="#" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="YouTube">
+                            <a href="https://www.youtube.com/@Oepicus" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="YouTube">
                                 <i data-lucide="youtube" class="w-5 h-5 stroke-[1.5]"></i>
                             </a>
                             <a href="#" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="Discord">
