--- a/landing_page.html
+++ b/landing_page.html
@@ -3,6 +3,7 @@
 
     <head>
         <!-- Google tag (gtag.js) -->
+        <meta charset="UTF-8">
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-4XV6K8C74B"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
@@ -33,7 +34,6 @@
 
 
 
-        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
         <!-- SEO -->
@@ -75,6 +75,7 @@
                         fontFamily: {
                             display: ['"Red Rose"', 'cursive'],
                             sans: ['"Red Rose"', 'sans-serif'],
+                            ipa: ['"Noto Sans"', 'sans-serif']
                         },
                         animation: {
                             'float': 'float 8s ease-in-out infinite',
@@ -269,9 +270,9 @@
                     <i data-lucide="menu" class="w-5 h-5"></i>
                 </button>
                 <a href="#" class="flex items-center gap-2 group" onclick="window.scrollTo(0,0)">
-                    <img src="https://i.ibb.co/d4PsWvF9/Oepicus-Logo-RED-GOLD-NO-BG-1.png" alt="OEPICUS" class="h-12 md:h-16 w-auto object-contain transition-transform duration-300 group-hover:scale-105">
+                    <img src="https://i.ibb.co/d4PsWvF9/Oepicus-Logo-RED-GOLD-NO-BG-1.png" alt="OEPICUS" class="h-14 md:h-20 w-auto object-contain transition-transform duration-300 group-hover:scale-105 animate-pulse-slow">
                 </a>
-                <div class="hidden md:flex items-center gap-8 text-xs uppercase font-bold tracking-widest">
+                <div class="hidden md:flex items-center gap-8 text-sm uppercase font-bold tracking-widest">
                     <a href="#philosophy" class="hover:text-brand-gold transition-colors">Origins</a>
                     <a href="#products" class="hover:text-brand-gold transition-colors">Instruments</a>
                     <a href="#faq" class="hover:text-brand-gold transition-colors">Support</a>
@@ -294,7 +295,7 @@
         </div>
 
         <!-- Hero Section -->
-        <header class="relative min-h-[100svh] flex items-center justify-center pt-36 md:pt-48 pb-12 px-6 z-10">
+        <header class="relative flex justify-center pt-48 md:pt-56 pb-24 md:pb-32 px-6 z-10">
             <div class="max-w-7xl mx-auto grid lg:grid-cols-2 gap-12 items-center w-full">
 
                 <!-- Hero Text -->
@@ -366,6 +367,34 @@
             </div>
         </header>
 
+        <!-- THE FOUNDRY -->
+        <section class="py-12 relative z-10 bg-brand-red/90 backdrop-blur-sm overflow-hidden">
+            <div class="absolute inset-0 bg-gradient-to-r from-brand-dark/80 to-transparent"></div>
+            <div class="max-w-5xl mx-auto px-6 relative z-20 text-center">
+                <h2 class="text-4xl md:text-5xl font-display font-bold text-white mb-4">THE FOUNDRY</h2>
+                <p class="text-brand-gold font-bold uppercase tracking-widest text-xs md:text-sm mb-8">Encrypted Channel // Limited Access</p>
+                <p class="text-white/80 text-base md:text-lg mb-8 max-w-3xl mx-auto font-light">
+                    The Apollon Series launches on Kickstarter this February.
+                    Join The Foundry to get pre-launch updates, early access, and exclusive offers before pledges go live.
+                </p>
+                <form class="flex flex-col sm:flex-row gap-4 max-w-lg mx-auto" id="subscribe-form">
+                    <div class="relative flex-1">
+                        <i data-lucide="mail" class="absolute left-4 top-1/2 transform -translate-y-1/2 text-white/50 w-4 h-4"></i>
+                        <input type="email" id="email" name="email" placeholder="ENTER EMAIL ADDRESS" class="w-full bg-black/30 border border-white/20 text-white placeholder-white/50 py-4 pl-12 pr-4 focus:outline-none focus:border-brand-gold transition-colors text-xs tracking-widest uppercase rounded-sm h-14">
+                    </div>
+                    <!-- Hidden field for tags -->
+                    <input type="hidden" id="tags" name="tags" value="oepicus_landing_page">
+
+                    <button type="submit" class="bg-brand-gold text-brand-dark font-bold uppercase tracking-widest px-8 py-4 hover:bg-white transition-colors rounded-sm h-14 flex items-center justify-center gap-2 text-xs">
+                        GRAB UPDATES <i data-lucide="arrow-right" class="w-4 h-4"></i>
+                    </button>
+                </form>
+                <div id="response-message" class="mt-3"></div>
+
+            </div>
+        </section>
+
+
         <!-- Stats Strip -->
         <div class="border-y border-white/10 bg-black/60 backdrop-blur-xl z-10 relative">
             <div class="max-w-7xl mx-auto px-6 py-10 md:py-16 flex flex-col md:flex-row justify-center md:justify-around items-center gap-10 md:gap-8">
@@ -402,13 +431,8 @@
             </div>
         </div>
 
-        <!-- Philosophy / Origins Section -->
-        <section id="philosophy" class="py-24 md:py-32 px-6 relative z-10 border-b border-white/5 overflow-hidden">
-            <!-- Removed solid bg-panel, made transparent for particles -->
-            <div class="absolute inset-0 bg-gradient-to-t from-panel/50 via-transparent to-panel/50 pointer-events-none"></div>
-            <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 lg:gap-16 items-center relative z-20">
-                <div class="fade-in-up order-2 md:order-1">
-                    <!-- Data Card: Made transparent -->
+
+<!--
                     <div class="border border-brand-gold/20 bg-black/40 p-6 md:p-8 rounded-lg relative overflow-hidden backdrop-blur-sm shadow-xl shadow-brand-gold/5">
                         <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-brand-gold to-brand-red"></div>
                         <div class="grid grid-cols-2 gap-6 md:gap-8">
@@ -429,6 +453,38 @@
                                 <p class="text-[10px] uppercase tracking-widest text-brand-gold mb-1">Method</p>
                                 <p class="text-3xl md:text-4xl font-display font-bold text-white">SMT <span class="text-sm text-gray-500">LAB</span></p>
                             </div>
+                        </div>
+                    </div>
+                -->
+        <!-- Philosophy / Origins Section -->
+        <section id="philosophy" class="py-24 md:py-32 px-6 relative z-10 border-b border-white/5 overflow-hidden">
+            <!-- Removed solid bg-panel, made transparent for particles -->
+            <div class="absolute inset-0 bg-gradient-to-t from-panel/50 via-transparent to-panel/50 pointer-events-none"></div>
+            <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 lg:gap-16 items-center relative z-20">
+                <div class="fade-in-up order-2 md:order-1">
+                    <!-- Data Card: Made transparent -->
+                    <div class="border border-brand-gold/20 bg-black/40 p-6 md:p-8 rounded-lg relative overflow-hidden backdrop-blur-sm shadow-xl shadow-brand-gold/5 space-y-6">
+                        <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-brand-gold to-brand-red"></div>
+
+                        <!-- Opus -->
+                        <div class="pb-4 border-b border-white/10">
+                            <p class="text-xl md:text-2xl font-display font-bold text-white tracking-tight">o·pus <span class="text-sm text-gray-400 font-sans">/ˈōpəs/</span></p>
+                            <p class="text-sm text-text-muted mt-2">An opus is a created work, usually musical in nature. The
+                                composer’s greatest opus was inspired by the blooming of the spring flowers.</p>
+                        </div>
+
+                        <!-- Epic -->
+                        <div class="pb-4 border-b border-white/10">
+                            <p class="text-xl md:text-2xl font-display font-bold text-white tracking-tight">ep·ic <span class="text-sm text-gray-400 font-sans">/ˈepik/</span></p>
+                            <p class="text-sm text-text-muted mt-2">An epic is a long book, poem, or film, whose story extends over a
+                                long period of time or tells of great events.</p>
+                        </div>
+
+                        <!-- Oepicus -->
+                        <div>
+                            <p class="text-xl md:text-2xl font-display font-bold text-white tracking-tight">oe·pi·cus <span class="text-sm text-gray-400 font-sans">/ˈōpɪkəs/</span></p>
+                            <p class="text-sm text-text-muted mt-2">The practice of applying epic craft and technology to sound, with
+                                human warmth, artistic intent, and just enough absurdity to keep it enjoyable.</p>
                         </div>
                     </div>
                 </div>
@@ -521,32 +577,6 @@
             </div>
         </section>
 
-        <!-- THE FOUNDRY -->
-        <section class="py-24 relative z-10 bg-brand-red/90 backdrop-blur-sm overflow-hidden">
-            <div class="absolute inset-0 bg-gradient-to-r from-brand-dark/80 to-transparent"></div>
-            <div class="max-w-4xl mx-auto px-6 relative z-20 text-center">
-                <h2 class="text-4xl md:text-5xl font-display font-bold text-white mb-4">THE FOUNDRY</h2>
-                <p class="text-brand-gold font-bold uppercase tracking-widest text-xs md:text-sm mb-8">Encrypted Channel // Limited Access</p>
-                <p class="text-white/80 text-base md:text-lg mb-8 max-w-xl mx-auto font-light">
-                    The Apollon Series launches on Kickstarter this February.
-                    Join The Foundry to get pre-launch updates, early access, and exclusive offers before pledges go live.
-                </p>
-                <form class="flex flex-col sm:flex-row gap-4 max-w-lg mx-auto" id="subscribe-form">
-                    <div class="relative flex-1">
-                        <i data-lucide="mail" class="absolute left-4 top-1/2 transform -translate-y-1/2 text-white/50 w-4 h-4"></i>
-                        <input type="email" id="email" name="email" placeholder="ENTER SIGNAL FREQUENCY" class="w-full bg-black/30 border border-white/20 text-white placeholder-white/50 py-4 pl-12 pr-4 focus:outline-none focus:border-brand-gold transition-colors text-xs tracking-widest uppercase rounded-sm h-14">
-                    </div>
-                    <!-- Hidden field for tags -->
-                    <input type="hidden" id="tags" name="tags" value="oepicus_landing_page">
-
-                    <button type="submit" class="bg-brand-gold text-brand-dark font-bold uppercase tracking-widest px-8 py-4 hover:bg-white transition-colors rounded-sm h-14 flex items-center justify-center gap-2 text-xs">
-                        Initialize <i data-lucide="arrow-right" class="w-4 h-4"></i>
-                    </button>
-                </form>
-                <div id="response-message" class="mt-3"></div>
-
-            </div>
-        </section>
 
         <!-- FAQ -->
         <section id="faq" class="py-24 md:py-32 px-6 relative z-10">
