--- a/landing_page.html
+++ b/landing_page.html
@@ -275,6 +275,7 @@
                 <div class="hidden md:flex items-center gap-8 text-sm uppercase font-bold tracking-widest">
                     <a href="#philosophy" class="hover:text-brand-gold transition-colors">Origins</a>
                     <a href="#products" class="hover:text-brand-gold transition-colors">Instruments</a>
+                    <a href="#contact" class="hover:text-brand-gold transition-colors">Connect</a>
                     <a href="#faq" class="hover:text-brand-gold transition-colors">Support</a>
                 </div>
                 <!-- Cart Button Hidden/Modified as per request to focus on pledging, but keeping DOM structure for now, made invisible or changed interaction -->
@@ -291,6 +292,7 @@
             </button>
             <a href="#philosophy" class="text-3xl font-display font-bold hover:text-brand-gold tracking-widest" onclick="toggleMenu()">ORIGINS</a>
             <a href="#products" class="text-3xl font-display font-bold hover:text-brand-gold tracking-widest" onclick="toggleMenu()">INSTRUMENTS</a>
+            <a href="#contact" class="text-3xl font-display font-bold hover:text-brand-gold tracking-widest" onclick="toggleMenu()">CONNECT</a>
             <a href="#faq" class="text-3xl font-display font-bold hover:text-brand-gold tracking-widest" onclick="toggleMenu()">SUPPORT</a>
         </div>
 
@@ -636,6 +638,52 @@
                         </button>
                         <div class="accordion-content h-0 overflow-hidden transition-all duration-300">
                             <div class="p-6 pt-0 text-text-muted text-sm md:text-base">Yes. Our parent company, 1V/OCT, successfully launched and delivered The Centre: Eurorack Modular Wavetable Synthesiser on Kickstarter in 2021. We've taken complex audio hardware from concept to backers' hands before, and we fully intend to do it again.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Us Section -->
+        <section id="contact" class="py-24 md:py-32 px-6 relative z-10 border-t border-white/5 bg-black/30">
+            <div class="max-w-4xl mx-auto text-center">
+                <h2 class="text-3xl md:text-5xl font-display font-bold mb-4 fade-in-up">Connect With Us</h2>
+                <p class="text-text-muted mb-12 fade-in-up max-w-2xl mx-auto">Have questions or just want to talk shop? Join our community channels to connect directly with the team and other musicians.</p>
+
+                <div class="grid md:grid-cols-3 gap-8 md:gap-12 fade-in-up" style="transition-delay: 100ms;">
+                    <!-- Discord -->
+                    <div class="glass p-8 rounded-xl flex flex-col items-center gap-6 border border-white/5 hover:border-brand-gold/30 transition-colors duration-300">
+                        <img src="assets/discord_qr.svg" alt="Discord QR Code" class="w-40 h-40 rounded-lg bg-white p-2">
+                        <div class="text-center">
+                            <h3 class="text-xl font-display font-bold text-white mb-2">Talk to us on Discord</h3>
+                            <p class="text-text-muted text-sm mb-4">The main hub for community discussion, support, and sneak peeks.</p>
+                            <a href="https://discord.gg/5ygA5QJuar" target="_blank" class="inline-flex items-center gap-2 text-brand-gold font-bold text-sm uppercase tracking-widest group">
+                                Join Server <i data-lucide="arrow-right" class="w-4 h-4 transition-transform group-hover:translate-x-1"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- WhatsApp Group -->
+                    <div class="glass p-8 rounded-xl flex flex-col items-center gap-6 border border-white/5 hover:border-brand-gold/30 transition-colors duration-300">
+                        <img src="assets/whatsapp_qr.svg" alt="WhatsApp QR Code" class="w-40 h-40 rounded-lg bg-white p-2">
+                        <div class="text-center">
+                            <h3 class="text-xl font-display font-bold text-white mb-2">Group Chat on WhatsApp</h3>
+                            <p class="text-text-muted text-sm mb-4">For general discussion and quick questions with the community.</p>
+                            <a href="https://chat.whatsapp.com/FT1yjd0W5Pl7VW3VLkV0Xr" target="_blank" class="inline-flex items-center gap-2 text-brand-gold font-bold text-sm uppercase tracking-widest group">
+                                Join Chat <i data-lucide="arrow-right" class="w-4 h-4 transition-transform group-hover:translate-x-1"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- WhatsApp Channel -->
+                    <div class="glass p-8 rounded-xl flex flex-col items-center gap-6 border border-white/5 hover:border-brand-gold/30 transition-colors duration-300">
+                        <img src="assets/whatsapp_channel_qr.svg" alt="WhatsApp Channel QR Code" class="w-40 h-40 rounded-lg bg-white p-2">
+                        <div class="text-center">
+                            <h3 class="text-xl font-display font-bold text-white mb-2">Updates on WhatsApp</h3>
+                            <p class="text-text-muted text-sm mb-4">A broadcast-only channel for the latest news and announcements.</p>
+                            <a href="https://whatsapp.com/channel/0029Vb7OoBPHgZWhOOVVlp3u" target="_blank" class="inline-flex items-center gap-2 text-brand-gold font-bold text-sm uppercase tracking-widest group">
+                                Follow Channel <i data-lucide="arrow-right" class="w-4 h-4 transition-transform group-hover:translate-x-1"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
