Added Kickstarter section and extra Subscribe section

--- a/landing_page.html
+++ b/landing_page.html
@@ -270,12 +270,12 @@
             }
 
             @keyframes heartbeat {
-                0% { transform: translate(-50%, -50%) scale(0.9); opacity: 0; }
+                0% { transform: translate(-50%, -50%) scale(0.95); opacity: 0; }
                 10% { transform: translate(-50%, -50%) scale(1); opacity: 1; }
-                20% { transform: translate(-50%, -50%) scale(0.9); opacity: 0; }
-                30% { transform: translate(-50%, -50%) scale(0.9); opacity: 0; }
+                25% { transform: translate(-50%, -50%) scale(0.95); opacity: 0; }
+                30% { transform: translate(-50%, -50%) scale(0.95); opacity: 0; }
                 40% { transform: translate(-50%, -50%) scale(1); opacity: 1; }
-                50% { transform: translate(-50%, -50%) scale(0.9); opacity: 0; }
+                55% { transform: translate(-50%, -50%) scale(0.95); opacity: 0; }
                 100% { transform: translate(-50%, -50%) scale(0.9); opacity: 0; }
             }
 
@@ -417,7 +417,7 @@
         </section>
 
         <!-- Oepicus Club -->
-        <section class="py-12 relative z-10 bg-brand-red/90 backdrop-blur-sm overflow-hidden">
+        <section class="py-12 relative z-10 bg-brand-red/90 backdrop-blur-sm overflow-hidden mt-1">
             <div class="absolute inset-0 bg-gradient-to-r from-brand-dark/80 to-transparent"></div>
             <div class="max-w-5xl mx-auto px-6 relative z-20 text-center">
                 <h2 class="text-4xl md:text-5xl font-display font-bold text-white mb-4">Oepicus Club</h2>
