Addd "whats behind" section

--- a/landing_page.html
+++ b/landing_page.html
@@ -639,6 +639,31 @@
             </div>
         </section>
 
+        <!-- What's Behind Section -->
+        <section id="whats-behind" class="py-24 md:py-32 px-6 relative z-10 border-b border-white/5 overflow-hidden">
+            <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 lg:gap-24 items-center">
+                <div class="fade-in-up">
+                    <h2 class="text-3xl md:text-5xl font-display font-medium leading-tight text-white mb-6">
+                        What's Behind All This?
+                    </h2>
+                    <div class="text-text-muted leading-relaxed space-y-6 text-sm md:text-base">
+                        <p>
+                            Yes, your eyes do not deceive you—those are CV inputs. While our instruments speak fluent Eurorack, you don't need a modular synth to explore their potential.
+                        </p>
+                        <p>
+                            Some pedals generate control voltage, while others listen for it. This means you can patch one pedal into another, creating complex interactions without a single module in sight.
+                        </p>
+                        <p class="font-bold text-white">
+                            Or, for a touch of beautiful chaos, you can even patch a pedal into itself.
+                        </p>
+                    </div>
+                </div>
+                <div class="fade-in-up order-first md:order-last flex justify-center">
+                    <img src="assets/whats_behind.png" alt="Rear view of an Oepicus pedal showing CV inputs" class="max-w-full h-auto rounded-lg shadow-2xl shadow-black/50">
+                </div>
+            </div>
+        </section>
+
         <!-- Products Section -->
         <section id="products" class="py-24 md:py-32 px-4 md:px-6 relative z-10">
             <div class="max-w-7xl mx-auto">
