Coming redirect properly

--- a/coming_soon.html
+++ b/coming_soon.html
@@ -6,6 +6,6 @@
     <meta http-equiv="refresh" content="0; url=coming_soon.html" />
 </head>
 <body>
-    <p>If you are not redirected automatically, please follow this <a href="https://oepicus.com/landing_page.html">link to the new page</a>.</p>
+    <p>If you are not redirected automatically, please follow this <a href="https://oepicus.com">link to the new page</a>.</p>
 </body>
 </html>
