--- a/coming_soon.html
+++ b/coming_soon.html
@@ -3,7 +3,7 @@
 <head>
     <title>Redirecting...</title>
     <!-- Redirect to another page immediately -->
-    <meta http-equiv="refresh" content="0; url=coming_soon.html" />
+    <meta http-equiv="refresh" content="0; url=/" />
 </head>
 <body>
     <p>If you are not redirected automatically, please follow this <a href="https://oepicus.com">link to the new page</a>.</p>
