--- a/index.html
+++ b/index.html
@@ -35,9 +35,30 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <!-- SEO -->
+        <!-- SEO & Metadata -->
         <title>OEPICUS | Future Audio Instruments</title>
         <meta name="description" content="Oepicus crafts high-fidelity audio instruments for the modern musician. Precision-engineered guitar pedals and effects built in the USA, HKG, and PHL.">
+        <link rel="canonical" href="https://oepicus.com/" />
+        <meta name="theme-color" content="#C5A059">
+
+        <!-- Favicons -->
+        <link rel="icon" href="favicon.ico" sizes="any">
+        <link rel="icon" href="assets/icon.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://oepicus.com/">
+        <meta property="og:title" content="OEPICUS | Future Audio Instruments">
+        <meta property="og:description" content="Oepicus crafts high-fidelity audio instruments for the modern musician. Precision-engineered guitar pedals and effects built in the USA, HKG, and PHL.">
+        <meta property="og:image" content="https://oepicus.com/assets/oepicus-social-share.png">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://oepicus.com/">
+        <meta property="twitter:title" content="OEPICUS | Future Audio Instruments">
+        <meta property="twitter:description" content="Oepicus crafts high-fidelity audio instruments for the modern musician. Precision-engineered guitar pedals and effects built in the USA, HKG, and PHL.">
+        <meta property="twitter:image" content="https://oepicus.com/assets/oepicus-social-share.png">
 
         <!-- Google Fonts: Red Rose -->
         <script type="text/javascript" nonce="1c48c5ededcc4c7890ab72845df" src="//local.adguard.org?ts=1767012813994&amp;type=content-script&amp;dmn=c7.my-control-panel.com:2083&amp;url=https%3A%2F%2Fc7.my-control-panel.com%3A2083%2Fcpsess1970565562%2Fdownload%3Fskipencode%3D1%26file%3D%252fhome%252fechopal1%252flumeaeterna.com%252foepicus%252findex.html&amp;app=com.android.chrome&amp;css=3&amp;js=1&amp;rel=1&amp;rji=1&amp;sbe=1&amp;stealth=1&amp;st-dnt"></script>
@@ -312,6 +333,23 @@
                 /* Initial state for non-active slides handled in HTML classes */
             }
         </style>
+
+        <!-- Structured Data -->
+        <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "Oepicus",
+          "url": "https://oepicus.com/",
+          "logo": "https://oepicus.com/assets/Oepicus-Logo-RED-GOLD-NO-BG-1.png",
+          "description": "Oepicus crafts high-fidelity audio instruments for the modern musician. Precision-engineered guitar pedals and effects built in the USA, HKG, and PHL.",
+          "sameAs": [
+            "https://www.instagram.com/oepicus",
+            "https://www.facebook.com/profile.php?id=61584611603188",
+            "https://www.youtube.com/@Oepicus"
+          ]
+        }
+        </script>
     </head>
 
     <body class="bg-void text-text-main font-sans antialiased selection:bg-brand-gold selection:text-brand-dark overflow-x-hidden relative">
@@ -835,10 +873,10 @@
                         <a href="https://www.youtube.com/@Oepicus" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="YouTube">
                             <i data-lucide="youtube" class="w-5 h-5 stroke-[1.5]"></i>
                         </a>
-                        <a href="#" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="Discord">
+                        <a href="https://discord.gg/5ygA5QJuar" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="Discord">
                             <i data-lucide="gamepad-2" class="w-5 h-5 stroke-[1.5]"></i>
                         </a>
-                        <a href="#" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="LinkedIn">
+                        <a href="https://www.linkedin.com/company/oepicus" class="text-white/30 hover:text-brand-gold transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(197,160,89,0.5)]" aria-label="LinkedIn">
                             <i data-lucide="linkedin" class="w-5 h-5 stroke-[1.5]"></i>
                         </a>
                     </div>
