--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@ sitemap:
                 <button onclick="renderProducts('Fuzz')" class="filter-btn flex-1 md:flex-none text-center px-4 py-2 rounded-full border border-white/10 text-[10px] font-bold uppercase tracking-widest hover:bg-white hover:text-void transition-all text-text-muted">Fuzz</button>
                 <button onclick="renderProducts('Modulation')" class="filter-btn flex-1 md:flex-none text-center px-4 py-2 rounded-full border border-white/10 text-[10px] font-bold uppercase tracking-widest hover:bg-white hover:text-void transition-all text-text-muted">Modulation</button>
                 <button onclick="renderProducts('Time')" class="filter-btn flex-1 md:flex-none text-center px-4 py-2 rounded-full border border-white/10 text-[10px] font-bold uppercase tracking-widest hover:bg-white hover:text-void transition-all text-text-muted">Time</button>
+                <button onclick="renderProducts('Noise')" class="filter-btn flex-1 md:flex-none text-center px-4 py-2 rounded-full border border-white/10 text-[10px] font-bold uppercase tracking-widest hover:bg-white hover:text-void transition-all text-text-muted">Noise</button>
             </div>
         </div>
         <div id="product-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
